// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Pure component match expected snapshot 1`] = `
<div>
  <ContainerPure
    className="fixedOnTheTop-0-0"
  >
    <div
      className="header-0-1"
    >
      <ColumnPure
        xs="6"
      >
        <LogotypePure />
      </ColumnPure>
    </div>
  </ContainerPure>
  <div
    className="headerPadding-0-2"
  />
</div>
`;

exports[`Header Pure component with scrolled down document since to "scrollTop: 24" match expected snapshot 1`] = `
<HeaderPure
  classNames={
    Object {
      ".header-0-1.shrinkedHeader": "header-0-1",
      "fixedOnTheTop": "fixedOnTheTop-0-0",
      "header": "header-0-1",
      "headerPadding": "headerPadding-0-2",
    }
  }
>
  <div>
    <ContainerPure
      className="fixedOnTheTop-0-0"
    >
      <div
        className="header-0-1"
      >
        <ColumnPure
          xs="6"
        >
          <LogotypePure />
        </ColumnPure>
      </div>
    </ContainerPure>
    <div
      className="headerPadding-0-2"
    />
  </div>
</HeaderPure>
`;

exports[`Header Pure component with scrolled down document since to "scrollTop: 100" match expected snapshot 1`] = `
<HeaderPure
  classNames={
    Object {
      ".header-0-1.shrinkedHeader": "header-0-1",
      "fixedOnTheTop": "fixedOnTheTop-0-0",
      "header": "header-0-1",
      "headerPadding": "headerPadding-0-2",
    }
  }
>
  <div>
    <ContainerPure
      className="fixedOnTheTop-0-0"
    >
      <div
        className="header-0-1 shrinkedHeader"
      >
        <ColumnPure
          xs="6"
        >
          <LogotypePure />
        </ColumnPure>
      </div>
    </ContainerPure>
    <div
      className="headerPadding-0-2"
    />
  </div>
</HeaderPure>
`;
